Added files for basic landing page
Added files, with the use of SASS as a main CSS pre-processor

--- a/index.html
+++ b/index.html
@@ -7,14 +7,32 @@
 
     <link rel="stylesheet" href="./styles/styles.css">
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
     <body>
+        <div id="nav-bar">
+            <p>SASSY.</p>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">More</a></li>
+            </ul>
+        </div>
         <div id="landing-page">
-            <div id="container">
-                <p>This should be white!</p>
+            <div id="main-container">
+                <img src="./images/main-image.png" alt="">
+                <div id="main-container-right">
+                    <h1>Want to get <span>SASSY?</span></h1>
+                    <p>get started with us today.</p>
+                </div>
+                
             </div>
-            <p>This should be black!</p>
+            <p>Alex Jachna and Co.</p>
         </div>
     </body>
 </html>
