Added new files

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>SASSY.</title>
 </head>
     <body>
         <div id="nav-bar">
@@ -33,6 +35,31 @@
                 
             </div>
             <p>Alex Jachna and Co.</p>
+        </div>
+
+        <div id="cards-section">
+            <p class="cards-section-title">Our Objective.</p>
+            <p class="cards-section-description">We focus on 3 things, and we can help you with any.</p>
+            <div id="cards-container">
+                <div class="card">
+                    <img src="images/house.png" alt="">
+                    <p class="title">Home</p>
+                    <p class="description">House, townhome, or condo and its contents</p>
+                    <div class="button">view details</div>
+                </div>
+                <div class="card">
+                    <img src="images/car.png" alt="">
+                    <p class="title">Car</p>
+                    <p class="description">Personal automobiles and their passengers</p>
+                    <div class="button">view details</div>
+                </div>
+                <div class="card">
+                    <img src="images/globe.png" alt="">
+                    <p class="title">Globe</p>
+                    <p class="description">Home Internet, cell, and Cable.</p>
+                    <div class="button">view details</div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
